--- a/roles/richard/templates/richard.uwsgi.conf.j2
+++ b/roles/richard/templates/richard.uwsgi.conf.j2
@@ -2,8 +2,8 @@ description "Richard uWSGI"
 start on level [2345]
 stop on level [06]
 
-setuid www-data
-setgid www-data
+setuid richard
+setgid richard
 
-exec {{ richard_venv }}/bin/uwsgi --ini /etc/richard/uwsgi.ini
+exec uwsgi --ini {{ richard_dir }}/uwsgi.ini
 start on startup
