--- a/roles/richard/templates/richard.uwsgi.ini.j2
+++ b/roles/richard/templates/richard.uwsgi.ini.j2
@@ -1,9 +1,7 @@
 [uwsgi]
-uid = www-data
-gid = www-data
-chdir = /vagrant/src
+uid = richard
+gid = richard
 module = richard.config.wsgi:application
-home = {{ richard_venv }}
 socket = /tmp/richard.socket
 chmod-socket = 664
 master = true
