--- a/roles/richard/templates/richard.uwsgi.ini.j2
+++ b/roles/richard/templates/richard.uwsgi.ini.j2
@@ -2,7 +2,7 @@
 uid = richard
 gid = richard
 module = richard.config.wsgi:application
-socket = /tmp/richard.socket
+socket = {{ richard_dir }}/richard.socket
 chmod-socket = 664
 master = true
 vacuum = true
