try using http instead of unix sockets

--- a/roles/richard/templates/richard.uwsgi.ini.j2
+++ b/roles/richard/templates/richard.uwsgi.ini.j2
@@ -3,6 +3,7 @@ uid = richard
 gid = richard
 module = richard.config.wsgi:application
 socket = {{ richard_dir }}/richard.socket
-chmod-socket = 664
+chmod-socket = 666
+#socket = 127.0.0.1:{{ richard_port }}
 master = true
 vacuum = true
