changes abound. dropped supervisor. dropped galaxy.roles for nginx. tweaking a lot of stuff

--- a/roles/richard/templates/richard.uwsgi.conf.j2
+++ b/roles/richard/templates/richard.uwsgi.conf.j2
@@ -5,5 +5,5 @@ stop on level [06]
 setuid richard
 setgid richard
 
-exec uwsgi --ini {{ richard_dir }}/uwsgi.ini
+exec uwsgi --ini {{ richard_uwsgi_ini }}
 start on startup
