Fix static forwarding to point to correct location

--- a/roles/richard/templates/richard_web.conf.j2
+++ b/roles/richard/templates/richard_web.conf.j2
@@ -12,7 +12,7 @@ server {
     }
 
     location /static/ {
-        alias {{ richard_static_root }};
+        alias {{ richard_static }}/;
     }
 
     location / {
