Rework some things so we can easily have site-specific stuff
This adds site_* variables and task that make it easy to have another
repository with site-specific templates and configuration in it which
richard can use.

--- a/roles/richard/templates/richard.uwsgi.ini.j2
+++ b/roles/richard/templates/richard.uwsgi.ini.j2
@@ -11,3 +11,4 @@ env = DJANGO_SECRET_KEY={{ DJANGO_SECRET_KEY }}
 env = RICHARD_API={{ RICHARD_API }}
 env = RICHARD_SITE_URL={{ RICHARD_SITE_URL }}
 env = DJANGO_SETTINGS_MODULE={{ DJANGO_SETTINGS_MODULE }}
+env = SITE_PATH={{ site_path }}
